--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,6 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
     background-color: #f9f9f9;
-    background: url('background.jpg') no-repeat center center fixed; 
     background-size: cover;
     margin: 0;
     padding: 0;
@@ -54,11 +53,6 @@ p {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: color 0.3s ease;
 }
-
-.site-nav a:hover {
-    color: #007BFF;
-}
-
 .site-header h1 {
     margin: 0;
     font-size: 26px;
@@ -72,7 +66,9 @@ p {
     transform: translateX(-50%);
 }
 
-.site-nav a, .main-nav ul li a {
+.site-nav a{
+    position: relative;
+    overflow: hidden;
     text-decoration: none;
     color: black;
     transition: color 0.3s, background-color 0.3s;
@@ -80,15 +76,38 @@ p {
     border-radius: 5px;
 }
 
-.site-nav a:hover, .main-nav ul li a:hover {
+.site-nav a:hover{
     background-color: rgba(233, 233, 233, 0.5); 
 }
 
-.main-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+.site-nav a::before,
+.site-nav a::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: width 0.3s ease;
+}
+
+.site-nav a::before {
+    top: 0;
+    left: 0%;
+}
+
+.site-nav a::after {
+    bottom: 0;
+    right: 0%;
+}
+
+.site-nav a:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.site-nav a:hover::after {
+    width: 100%;
+    right: 0;
 }
 
 button {
@@ -108,14 +127,56 @@ button:active {
     transform: translateY(1px);
 }
 
+.download-link {
+    position: relative; 
+    overflow: hidden;
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.download-link::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300%;
+    height: 300%;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 0.75s ease;
+    z-index: 0;
+}
+
+.download-link:hover::before {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.download-link:hover {
+    background-color: #0056b3;
+    transform: translateY(-3px);
+}
+
+.download-link:active {
+    transform: translateY(1px);
+}
+
 .book-card {
+    position: relative;
     display: flex;
     flex-direction: column; 
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     width: 220px;
-    height: 350px; 
-    border: 1px solid #ccc;
-    padding: 15px;
+    height: 350px;
     border-radius: 10px;
     text-align: center;
     background-color: #fafafa;
@@ -136,39 +197,44 @@ button:active {
 }
 
 .book-card img {
-    width: 140px;
-    height: 200px;
-    max-width: 100%;
-    border-radius: 5px;
-    margin-bottom: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+.book-info-container {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
+}
+
+.book-card:hover .book-info-container {
+    transform: translateY(0);
 }
 
 .book-card h3 {
     font-size: 18px;
-    margin-bottom: 10px;
     color: #333;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin: 15px 15px 0px 15px;
 }
 
 .book-card p {
     font-size: 16px;
     color: #666;
-    margin-bottom: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
 .book-card .download-link {
-    display: inline-block;
-    margin-bottom: auto;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .book-card .download-link:hover {
@@ -196,6 +262,7 @@ button:active {
     object-position: center;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s ease;
 }
 
 .book-info {
@@ -215,23 +282,6 @@ button:active {
 .book-info p {
     font-size: 18px;
     margin: 10px 0;
-}
-
-.download-link {
-    display: inline-block;
-    padding: 12px 24px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 20px;
-    font-size: 16px;
-    font-weight: bold;
-    transition: background-color 0.3s;
-}
-
-.download-link:hover {
-    background-color: #0056b3;
 }
 
 @media (max-width: 768px) {
@@ -384,6 +434,8 @@ button:active {
 }
 
 .auth-button {
+    position: relative;
+    overflow: hidden;
     padding: 8px 16px;
     background-color: #0056b3;
     color: white;
@@ -394,6 +446,24 @@ button:active {
     transition: background-color 0.3s, transform 0.2s;
     margin: 0px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.auth-button::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300%;
+    height: 300%;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 0.75s ease;
+    z-index: 0;
+}
+
+.auth-button:hover::before {
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .auth-button:hover {
