--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,6 @@
     --padding-large: 1.25rem; /* 20px */
     --border-radius-small: 0.3125rem; /* 5px */
     --border-radius-medium: 0.625rem; /* 10px */
-    --box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
     --font-size-base: 1rem; /* 16px */
     --font-size-large: 2.25rem; /* 36px */
     --font-size-medium: 1.75rem; /* 28px */
@@ -512,5 +511,5 @@ button:active {
 }
 
 h1, h2 {
-    animation: fadeIn 0.6s ease forwards; /* Применяем анимацию к заголовкам */
+    animation: fadeIn 0.6s ease forwards;
 }
